Ajusta testes intermitentes por problemas com Kafka.