@@ -1,47 +1,85 @@
 package br.com.alc.ecommerce.checkout.infrastructure.helper.manager.impl;
 
 import br.com.alc.ecommerce.checkout.infrastructure.helper.manager.KafkaManager;
-import lombok.AllArgsConstructor;
+import br.com.alc.ecommerce.checkout.infrastructure.helper.util.ObjectMapperHelper;
 import lombok.extern.log4j.Log4j2;
+import org.apache.kafka.clients.admin.AdminClient;
+import org.apache.kafka.clients.admin.RecordsToDelete;
+import org.apache.kafka.clients.consumer.Consumer;
+import org.apache.kafka.clients.consumer.ConsumerRecord;
+import org.apache.kafka.clients.consumer.ConsumerRecords;
+import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.serialization.StringDeserializer;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.kafka.config.KafkaListenerEndpointRegistry;
+import org.springframework.kafka.core.KafkaAdmin;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.kafka.listener.MessageListenerContainer;
+import org.springframework.kafka.support.serializer.ErrorHandlingDeserializer;
+import org.springframework.kafka.support.serializer.JsonDeserializer;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
+import java.time.Duration;
+import java.util.*;
+import java.util.stream.StreamSupport;
+
+import static br.com.alc.ecommerce.checkout.infrastructure.helper.util.ObjectMapperHelper.generateJson;
+import static java.lang.Long.MAX_VALUE;
+import static java.util.Arrays.asList;
+import static org.apache.kafka.clients.consumer.ConsumerConfig.*;
+import static org.springframework.kafka.support.serializer.ErrorHandlingDeserializer.KEY_DESERIALIZER_CLASS;
+import static org.springframework.kafka.support.serializer.ErrorHandlingDeserializer.VALUE_DESERIALIZER_CLASS;
+import static org.springframework.kafka.support.serializer.JsonDeserializer.TRUSTED_PACKAGES;
 
 @Log4j2
 @Component
-@AllArgsConstructor
 @SuppressWarnings("squid:S2925") // "Thread.sleep" should not be used in tests
 public class KafkaManagerImpl implements KafkaManager {
 
+    private final KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry;
     private final KafkaTemplate<String, Object> kafkaTemplate;
-    private final Map<String, MessageListenerContainer> listenerContainers;
+    private final AdminClient adminClient;
+    private final KafkaAdmin kafkaAdmin;
+
+    private final String bootstrapServers;
+
+    public KafkaManagerImpl(KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry,
+                            KafkaTemplate<String, Object> kafkaTemplate,
+                            AdminClient adminClient,
+                            KafkaAdmin kafkaAdmin,
+                            @Value(value = "${spring.kafka.bootstrap-servers}") String bootstrapServers) {
+        this.kafkaListenerEndpointRegistry = kafkaListenerEndpointRegistry;
+        this.kafkaTemplate = kafkaTemplate;
+        this.adminClient = adminClient;
+        this.kafkaAdmin = kafkaAdmin;
+        this.bootstrapServers = bootstrapServers;
+    }
 
     @Override
     public void disableAllListeners() {
-        listenerContainers.values().forEach(MessageListenerContainer::stop);
+        kafkaListenerEndpointRegistry.getAllListenerContainers().stream().forEach(MessageListenerContainer::stop);
     }
 
     @Override
     public void enableAllListeners() {
-        listenerContainers.values().forEach(MessageListenerContainer::start);
+        kafkaListenerEndpointRegistry.getAllListenerContainers().stream().forEach(MessageListenerContainer::start);
     }
 
     @Override
     public void disableListener(String topicName) {
-        if (listenerContainers.containsKey(topicName)) {
-            listenerContainers.get(topicName).stop();
-        }
+        kafkaListenerEndpointRegistry.getListenerContainers()
+                .stream()
+                .filter(listener -> asList(listener.getContainerProperties().getTopics()).contains(topicName))
+                .forEach(MessageListenerContainer::stop);
     }
 
     @Override
     public void enableListener(String topicName) {
-        if (listenerContainers.containsKey(topicName)) {
-            listenerContainers.get(topicName).start();
-        }
+        kafkaListenerEndpointRegistry.getListenerContainers()
+                .stream()
+                .filter(listener -> asList(listener.getContainerProperties().getTopics()).contains(topicName))
+                .forEach(MessageListenerContainer::start);
     }
 
     @Override
@@ -51,34 +89,52 @@ public class KafkaManagerImpl implements KafkaManager {
 
     @Override
     public void clearTopic(String topicName) {
-        kafkaTemplate.executeInTransaction(operations -> {
-            operations.send(topicName, null);
-            return null;
-        });
+        for (int i = 0; i < 10; i++) {
+            Map<TopicPartition, RecordsToDelete> records = new HashMap<>();
+            records.put(new TopicPartition(topicName, i), RecordsToDelete.beforeOffset(-1));
+            records.put(new TopicPartition(topicName, i), RecordsToDelete.beforeOffset(0));
+            records.put(new TopicPartition(topicName, i), RecordsToDelete.beforeOffset(MAX_VALUE));
+            adminClient.deleteRecords(records);
+        }
+
+//        adminClient.deleteTopics(Collections.singleton(topicName));
+//        kafkaAdmin.createOrModifyTopics(new NewTopic(topicName, 2, (short) 1));
     }
 
     @Override
     public List<String> getMessages(String topicName) {
-        return List.of();
+        try (Consumer<String, Object> consumer = new KafkaConsumer<>(buildConsumeProperties())) {
+            consumer.subscribe(Collections.singletonList(topicName));
+            ConsumerRecords<String, Object> records = consumer.poll(Duration.ofSeconds(2));
+            Iterable<ConsumerRecord<String, Object>> iterable = () -> records.records(topicName).iterator();
+            StreamSupport.stream(iterable.spliterator(), false);
+            return StreamSupport.stream(iterable.spliterator(), false)
+                    .map(ConsumerRecord::value)
+                    .map(ObjectMapperHelper::generateJson)
+                    .toList();
+        }
     }
 
     @Override
     public void sendMessage(String topic, Object request) {
-
+        try {
+            log.info("---> Sending to topic {} - {}", topic, generateJson(request));
+            kafkaTemplate.send(topic, request);
+        } catch (final Exception exception) {
+            log.error("Error sendMessage: " + exception.getMessage(), exception);
+        }
     }
 
-    @Override
-    public Properties getTopicConfigurations(String topicName) {
-        return null;
-    }
-
-    @Override
-    public boolean topicExists(String topicName) {
-        return false;
-    }
-
-    @Override
-    public Integer getMessageCount(String topicName) {
-        return 0;
+    private Properties buildConsumeProperties() {
+        Properties configs = new Properties();
+        configs.put(BOOTSTRAP_SERVERS_CONFIG, bootstrapServers);
+        configs.put(GROUP_ID_CONFIG, "ecommerce-checkout-id-group");
+        configs.put(KEY_DESERIALIZER_CLASS_CONFIG, ErrorHandlingDeserializer.class);
+        configs.put(VALUE_DESERIALIZER_CLASS_CONFIG, ErrorHandlingDeserializer.class);
+        configs.put(KEY_DESERIALIZER_CLASS, StringDeserializer.class);
+        configs.put(VALUE_DESERIALIZER_CLASS, JsonDeserializer.class);
+        configs.put(TRUSTED_PACKAGES, "*");
+        configs.put(AUTO_OFFSET_RESET_CONFIG, "earliest");
+        return configs;
     }
 }
